# local-agents

./: .gitignore  AGENTS.md  ARCHITECTURE_PLAN.md  AUTHORS  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CREDITS.md  GODOT_BEST_PRACTICES.md  GPU_FIELD_PLAN.md  HANDOFF.md  MATERIALFIELD_3D_PLAN.md  MindGame.csproj  MindGame.csproj.old.1  MindGame.csproj.old.2  NATIVE_SIM_UNIFICATION_PLAN.md  README.md  ROADMAP_0.5.md  SPHERICAL_PLANET_PLAN.md  THIRD_PARTY_LICENSES.md  TODO.md  USAGE.md  VOXEL_NATIVE_INTEGRATION_PLAN.md  agents.md  blender_convert_female.py  convert_female.gd  export_presets.cfg  project.godot  pyproject.toml
.github/workflows/: build-extension.yml  godot-headless-tests.yml
addons/local_agents/: LocalAgentsEditorPlugin.gd  mind_game_editor_plugin.gd  plugin.cfg
addons/local_agents/agent_manager/: AgentManager.gd
addons/local_agents/agents/: Agent.gd  Agent3D.gd  Agent3D.tscn  Character.gd  Character.tres  LlmClient.gd
addons/local_agents/api/: DownloadClient.gd
addons/local_agents/audio/: AudioDirector.gd  AudioVoicePool.gd  MusicDirector.gd  SfxBank.gd  SynthPresets.gd  default_bus_layout.tres
addons/local_agents/controllers/: ChatController.gd  ChatController.tscn  ConversationStore.gd  DownloadController.gd  ModelDownloadService.gd  SavedChatsController.gd  SavedChatsController.tscn
addons/local_agents/creatures/: Creature.gd  Creature.tscn  Fish.gd  Food.gd  ScentChannels.gd
addons/local_agents/editor/: ConfigurationPanel.gd  ConfigurationPanel.tscn  DownloadTab.tscn  LocalAgentsPanel.tscn
addons/local_agents/examples/: Agent3DExample.gd  Agent3DExample.tscn  AgentActionsDemo.gd  AgentActionsDemo.tscn  AgentConversationDemo.gd  AgentConversationDemo.tscn  AgentQuickstart.gd  AgentQuickstart.tscn  (+13 more)
addons/local_agents/gdextensions/localagents/: CMakeLists.txt  localagents.gdextension
addons/local_agents/gdextensions/localagents/include/: AgentNode.hpp  AgentRuntime.hpp  FailureEmissionDeterministicNoise.hpp  LAProcess.hpp  LocalAgentsBoidsNativeBridge.hpp  LocalAgentsComputeManager.hpp  LocalAgentsEnvironmentStageExecutor.hpp  LocalAgentsFieldRegistry.hpp  LocalAgentsNativeVoxelTerrainMutator.hpp  LocalAgentsQueryService.hpp  LocalAgentsScheduler.hpp  LocalAgentsSimProfiler.hpp  LocalAgentsSimulationCore.hpp  LocalAgentsSimulationInterfaces.hpp  LocalAgentsVoxelDispatchBridge.hpp  LocalAgentsVoxelOrchestration.hpp  LocalAgentsWorldSimulationNativeUtils.hpp  ModelDownloadManager.hpp  NetworkGraph.hpp  RuntimeStringUtils.hpp  SimulationFailureEmissionPlanner.hpp  VoxelEditEngine.hpp  VoxelEditOp.hpp
addons/local_agents/gdextensions/localagents/include/helpers/: LocalAgentsFractureDebrisEmitter.hpp  NativeVoxelTerrainMutatorSurfaceDeltaHelpers.hpp  SimulationCoreDictionaryHelpers.hpp  StructureLifecycleNativeHelpers.hpp  VoxelEditCpuExecutionHelpers.hpp  VoxelEditParsingHelpers.hpp  VoxelEditPayloadValidationHelpers.hpp
addons/local_agents/gdextensions/localagents/include/sim/: CoreSimulationPipeline.hpp  CoreSimulationPipelineFieldInputResolution.hpp  CoreSimulationPipelineFieldInputResolutionScalarHelpers.hpp  UnifiedSimulationPipeline.hpp  UnifiedSimulationPipelineFieldInputResolution.hpp  UnifiedSimulationPipelineInternal.hpp  VoxelEditGpuExecutor.hpp  VoxelGpuDispatchMetadata.hpp  VoxelGpuResourceCache.hpp
addons/local_agents/gdextensions/localagents/scripts/: build_all.sh  build_extension.sh  fetch_dependencies.sh  fetch_runtimes.sh  report_release_sizes.sh
addons/local_agents/gdextensions/localagents/src/: AgentNode.cpp  AgentRuntime.cpp  FailureEmissionDeterministicNoise.cpp  LAProcess.cpp  LocalAgentsBoidsNativeBridge.cpp  LocalAgentsComputeManager.cpp  LocalAgentsEnvironmentStageExecutor.cpp  LocalAgentsFieldRegistry.cpp  LocalAgentsNativeVoxelTerrainMutator.cpp  LocalAgentsQueryService.cpp  LocalAgentsRegister.cpp  LocalAgentsScheduler.cpp  LocalAgentsSimProfiler.cpp  LocalAgentsSimulationCore.cpp  LocalAgentsVoxelDispatchBridge.cpp  LocalAgentsVoxelOrchestration.cpp  LocalAgentsWorldSimulationNativeUtils.cpp  ModelDownloadManager.cpp  NetworkGraph.cpp  SimulationFailureEmissionPlanner.cpp  VoxelEditEngine.cpp
addons/local_agents/gdextensions/localagents/src/helpers/: LocalAgentsFractureDebrisEmitter.cpp  NativeVoxelTerrainMutatorSurfaceDeltaHelpers.cpp  SimulationCoreDictionaryHelpers.cpp  StructureLifecycleNativeHelpers.cpp  VoxelEditCpuExecutionHelpers.cpp  VoxelEditParsingHelpers.cpp  VoxelEditPayloadValidationHelpers.cpp
addons/local_agents/gdextensions/localagents/src/sim/: CoreSimulationPipeline.cpp  CoreSimulationPipelineFieldEvolution.cpp  CoreSimulationPipelineFieldInputResolution.cpp  CoreSimulationPipelineFieldInputResolutionScalarHelpers.cpp  CoreSimulationPipelineInternal.cpp  CoreSimulationPipelineStages.cpp  UnifiedSimulationPipeline.cpp  UnifiedSimulationPipelineFieldEvolution.cpp  UnifiedSimulationPipelineFieldInputResolution.cpp  UnifiedSimulationPipelineInternal.cpp  UnifiedSimulationPipelineStages.cpp  VoxelEditGpuExecutor.cpp  VoxelGpuDispatchMetadata.cpp  VoxelGpuResourceCache.cpp
addons/mind_game/: mind_game_editor_plugin.gd  plugin.cfg
docs/: 0.4_CREATURE_FEATURES.md  0.4_PARALLELIZATION_GUIDE.md  EXPORT.md  NATIVE_SIM_UNIFICATION_PLAN.md  NETWORK_GRAPH.md  NPC_BACKSTORY_GRAPH_CYPHER.md  PLANET_GEOPHYSICS.md  TRAILER.md  VERTICAL_SLICE_CONTRACT_TABLES.md  VILLAGE_VERTICAL_SLICE_PLAN.md
local_agents/: __init__.py  model_utils.py
local_agents/data/: llama_cpp_models.json
scripts/: agent_harness.sh  bake_model_forward.py  build_emoji_subset.py  capture_trailer.sh  check_extension.gd  check_max_file_length.sh  check_no_direct_refcounted_invocation.sh  check_no_inferred_typing.sh  check_policy_plan_markers.sh  download_llama_cpp_model.py  export_game.sh  fetch_runtimes.sh  finetune_functiongemma.sh  fixture_check.sh  functiongemma_train.py  new_worktree.sh  perf_bench.sh  run_destruction_tests.sh  run_fps_fire_destroy.sh  run_godot_check.sh  run_inference.py  run_sim_offscreen.sh  run_single_test.sh  run_tests.sh  screenshot_suite.sh  sim_check.sh  smoke_check.sh
tests/: test_qwen3_integration.py
(+1521 files in other folders)
